--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                                     <li><a href="product.html">product</a><i
                                             class="fa-solid fa-angle-down"></i></li>
                                     <li><a href="#">page</a><i class="fa-solid fa-angle-down"></i></li>
-                                    <li><a href="#">blog</a><i class="fa-solid fa-angle-down"></i></li>
+                                    <li><a href="blog.html">blog</a><i
+                                            class="fa-solid fa-angle-down"></i></li>
                                     <li><a href="#">buy masino now</a><i
                                             class="fa-solid fa-exclamation"></i></li>
                                 </ul>
