--- a/blog.html
+++ b/blog.html
@@ -242,24 +242,29 @@
                                     </div>
                                 </div>
                                 <div class="col blog-main-item">
-                                    <img src="assets/img/blog-img-2.jpg" alt="#">
-                                    <div class="blog-main-item-title">
-                                        <p class="blog-main-item-title-categories">
-                                            LIFE STYLE</p>
-                                        <h4 class="blog-main-item-title-top">Latest Swimsuit Model
-                                            This Year</h4>
-                                        <p class="blog-main-item-title-main-page-shop">These are the
-                                            people
-                                            who make
-                                            your life asier. Large tiles were
-                                            arranged on the counter top plate near the window of the
-                                            living
-                                            room, they were...</p>
-                                        <p class="blog-main-item-title-bottom-shop">
-                                            <span class="blog-main-item-title-bottom-page-shop">By
-                                                BLUESKYTECH</span>AUG 12, 2023
-                                        </p>
-                                    </div>
+                                    <a href="#">
+                                        <img src="assets/img/blog-img-2.jpg" alt="#">
+                                        <div class="blog-main-item-title">
+                                            <p class="blog-main-item-title-categories">
+                                                LIFE STYLE</p>
+                                            <h4 class="blog-main-item-title-top">Latest Swimsuit
+                                                Model
+                                                This Year</h4>
+                                            <p class="blog-main-item-title-main-page-shop">These are
+                                                the
+                                                people
+                                                who make
+                                                your life asier. Large tiles were
+                                                arranged on the counter top plate near the window of
+                                                the
+                                                living
+                                                room, they were...</p>
+                                            <p class="blog-main-item-title-bottom-shop">
+                                                <span class="blog-main-item-title-bottom-page-shop">By
+                                                    BLUESKYTECH</span>AUG 12, 2023
+                                            </p>
+                                        </div>
+                                    </a>
                                 </div>
                                 <div class="col blog-main-item">
                                     <img src="assets/img/blog-img-3.jpg" alt="#">
