--- a/blog.html
+++ b/blog.html
@@ -157,33 +157,39 @@
                                 </div>
                                 <div class="popular-posts-type">
                                     <div class="popular-posts-type-main">
-                                        <div class="popular-posts-type-left">
-                                            <img src="assets/img/bg-blog-1.jpg" alt="#">
-                                        </div>
-                                        <div class="popular-posts-type-right">
-                                            <h4>The Top 10 Trends Of <br> Autumn 2023</h4>
-                                            <p>AUG 12, 2023</p>
-                                        </div>
+                                        <a href="blog-details.html">
+                                            <div class="popular-posts-type-left">
+                                                <img src="assets/img/bg-blog-1.jpg" alt="#">
+                                            </div>
+                                            <div class="popular-posts-type-right">
+                                                <h4>The Top 10 Trends Of <br> Autumn 2023</h4>
+                                                <p>AUG 12, 2023</p>
+                                            </div>
+                                        </a>
                                     </div>
 
                                     <div class="popular-posts-type-main">
-                                        <div class="popular-posts-type-left">
-                                            <img src="assets/img/bg-blog-2.jpg" alt="#">
-                                        </div>
-                                        <div class="popular-posts-type-right">
-                                            <h4>The Top 10 Trends Of <br> Autumn 2023</h4>
-                                            <p>AUG 12, 2023</p>
-                                        </div>
+                                        <a href="#">
+                                            <div class="popular-posts-type-left">
+                                                <img src="assets/img/bg-blog-2.jpg" alt="#">
+                                            </div>
+                                            <div class="popular-posts-type-right">
+                                                <h4>The Top 10 Trends Of <br> Autumn 2023</h4>
+                                                <p>AUG 12, 2023</p>
+                                            </div>
+                                        </a>
                                     </div>
 
                                     <div class="popular-posts-type-main">
-                                        <div class="popular-posts-type-left">
-                                            <img src="assets/img/bg-blog-3.jpg" alt="#">
-                                        </div>
-                                        <div class="popular-posts-type-right">
-                                            <h4>The Top 10 Trends Of <br> Autumn 2023</h4>
-                                            <p>AUG 12, 2023</p>
-                                        </div>
+                                        <a href="#">
+                                            <div class="popular-posts-type-left">
+                                                <img src="assets/img/bg-blog-3.jpg" alt="#">
+                                            </div>
+                                            <div class="popular-posts-type-right">
+                                                <h4>The Top 10 Trends Of <br> Autumn 2023</h4>
+                                                <p>AUG 12, 2023</p>
+                                            </div>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -573,6 +579,9 @@
             </div>
         </div>
     </body>
+    <script src="assets/js/script.js"></script>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.3/nouislider.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
