--- a/blog-details.html
+++ b/blog-details.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="assets/css/product.css">
         <link rel="stylesheet" href="assets/css/blog.css">
         <link rel="stylesheet" href="assets/css/blog-details.css">
+        <link rel="stylesheet" href="assets/css/resposive.css">
         <link rel="stylesheet" href="assets/font/fontawesome-free-6.4.2-web/css/all.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -62,8 +63,8 @@
                                     <li class="notification-icon"><i class="fa-regular fa-heart"></i>
                                         <span class="notification-badge">2</span>
                                     </li>
-                                    <li class="notification-icon"><i
-                                            class="fa-solid fa-cart-shopping"></i>
+                                    <li class="notification-icon">
+                                        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                                         <span class="notification-badge">5</span>
                                     </li>
                                 </ul>
@@ -119,10 +120,283 @@
             <!-- =========================BACK GROUND================ -->
             <div class="container-blog-details">
                 <div class="background">
-                    <img src="assets/img/bg-blog.jpg" alt="#">
-                    <div class="background-title">
-                        <h2>Blog</h2>
-                        <p>Home / Blog</p>
+                    <div class="background-title-blog">
+                        <p>Home / Blog / <span class="breadcrumb-title-two">The Top 10 Trends Of
+                                Autumn 2023</span></p>
+                    </div>
+
+                    <div class="background-img-blog">
+                        <img src="assets/img/blog-details-img-1.jpg" alt="#">
+                        <div class="container-blog-details-title">
+                            <p class="container-blog-details-title-categories">LIFE STYLE</p>
+                            <h4 class="container-blog-details-title-top">Latest Swimsuit Model This
+                                Year</h4>
+                            <div class="container-blog-details-title-bottom-blog">
+                                <span class="container-blog-details-title-bottom-blog-page">
+                                    BY BLUESKYTECH
+                                </span>
+                                <span class="container-blog-details-title-bottom-blog-page">
+                                    AUG 12,
+                                </span>
+                                <span class="container-blog-details-title-bottom-blog-page">
+                                    2023 02 Comment(s)
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container-blog-details-main-center">
+                    <div class="container-blog-details-main">
+                        <p>
+                            These are the people who make your life asier. Large tiles were arranged
+                            on
+                            the counter top plate near the window of the living room, they
+                            were...This
+                            year, it marks its 50th anniversary by getting back to its roots in
+                            style
+                            with new, limited edition models. Celebrate this local brand and its
+                            exceptional craftsmanship with us.
+                        </p>
+
+                        <p>
+                            Umino story began in 1970 with the snow-covered landscape of Montreal as
+                            a
+                            backdrop. Louis Grenier, a young man whose family worked in the textile
+                            industry, was looking to develop technology that could brave the
+                            harshest
+                            winter conditions. Quickly, his coats gained popularity and became local
+                            legend. Unimo strength at that time remains the guarantee of its success
+                            today: <span class="container-blog-details-main-span">Living own first
+                                saying</span> saw second open third.
+                        </p>
+                    </div>
+
+                    <div class="container-blog-details-main-text">
+                        <img src="assets/img/icon-blog-detail.png" alt="#">
+                        <p class="container-blog-details-main-text-center">
+                            We are content to rest in peace, when the whole universe is changing
+                            every
+                            second. Take the opportunity because opportunities don't come twice.
+                        </p>
+                        <p class="container-blog-details-main-text-bottom">MICHAEL ANTHONY</p>
+                    </div>
+
+                    <div class="container-blog-details-main-bottom-text">
+                        <p>
+                            The Montreal-based company has been located on Rachel Street since the
+                            very
+                            beginning. It’s at this location in the heart of the Plateau-Mont-Royal
+                            where all Umino coats are crafted using a meticulous artisanal
+                            manufacturing
+                            process. Directly inspired by the climate in which they live, the
+                            artisans
+                            work with care to create warm, heavy-duty coats. Each model is designed
+                            to
+                            perform a specific function while still staying fashionable. <span
+                                class="container-blog-details-main-span"> No detail is
+                                left to chance!</span> With a lifetime guarantee, Umino creations
+                            come
+                            with the
+                            promise of braving many winters, even the most difficult ones.
+                        </p>
+                    </div>
+
+                    <div class="container-blog-details-main-bottom">
+                        <div class="row container-blog-details-main-bottom-row">
+                            <div class="col container-blog-details-main-bottom-col">
+                                <img src="assets/img/blog-details-img-2.jpg" alt="#">
+                            </div>
+                            <div class="col container-blog-details-main-bottom-col">
+                                <img src="assets/img/blog-details-img-3.jpg" alt="#">
+                            </div>
+                        </div>
+                        <div class="container-blog-details-main-bottom-tittle">
+                            <p>
+                                Limited edition coats inspired by its iconic models. These robust
+                                parkas with vintage charm demonstrate a unique mix of yesterday's
+                                cult style with today's textile technology. Their Thermo+ synthetic
+                                insulation is known for its exceptional thermal properties and its
+                                performance in wet conditions. But the shore people would change
+                                their minds about it at sea, on a long voyage.
+                            </p>
+
+                            <p>
+                                They are equipped with a breathable and waterproof membrane that’s
+                                resistant to weather and wind. The men’s Toundra model stands out
+                                for its four pockets in the front and elastic cuffs. The Typha style
+                                for women offers a loose-fitting silhouette that cinches at the
+                                waist. In the both cases, we absolutely love the cozy, sherpa-lined
+                                collar with a hidden hood, a detail that’s practical and trendy.
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="container-blog-details-tags-icons">
+                        <div class="container-blog-details-tags">
+                            <div class="container-blog-details-tags-title">
+                                <h2>Tags:</h2>
+                            </div>
+                            <div class="container-blog-details-tags-type-tags">
+                                <button class="tags-btn container-blog-details-tags-type-tags">Business</button>
+                                <button class="tags-btn container-blog-details-tags-type-tags">Electronic</button>
+                                <button class="tags-btn container-blog-details-tags-type-tags">iPad</button>
+                                <button class="tags-btn container-blog-details-tags-type-tags">Fashion</button>
+                            </div>
+                        </div>
+
+                        <div class="container-blog-details-icons">
+                            <div class="container-blog-details-tags-title">
+                                <h2>Share:</h2>
+                            </div>
+                            <div class="container-blog-details-tags-icon">
+                                <div class="container-blog-details-tags-icons-fa-brands"><i
+                                        class="fa-brands fa-twitter"></i> </div>
+                                <div class="container-blog-details-tags-icons-fa-brands"><i
+                                        class="fa-brands fa-facebook-f"></i> </div>
+                                <div class="container-blog-details-tags-icons-fa-brands"> <i
+                                        class="fa-brands fa-google-plus-g"></i> </div>
+                                <div class="container-blog-details-tags-icons-fa-brands"> <i
+                                        class="fa-brands fa-pinterest-p"></i> </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="container-blog-details-bottom-end">
+                        <div class="container-blog-details-bottom-end-left">
+                            <div class="container-blog-details-bottom-end-left-top">
+                                <i class="fa-solid fa-angle-left"></i>
+                                <p class="container-blog-details-bottom-end-title"> Post</p>
+                            </div>
+                            <div class="container-blog-details-bottom-end-left-bottom">
+                                <p>The Top 10 Trends Of Autumn 2023</p>
+                            </div>
+                        </div>
+                        <div class="container-blog-details-bottom-end-right">
+                            <div class="container-blog-details-bottom-end-right-top">
+                                <i class="fa-solid fa-angle-right"></i>
+                                <p class="container-blog-details-bottom-end-title">Next Post</p>
+                            </div>
+                            <div class="container-blog-details-bottom-end-right-bottom">
+                                <p>The Top 10 Trends Of Autumn 2023</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="container-blog-details-main-center-bottom">
+                        <h3>Related Posts</h3>
+                        <div class="row blog-main">
+                            <div class="col blog-main-item">
+                                <img src="assets/img/blog-img-2.jpg" alt="#">
+                                <div class="blog-main-item-title">
+                                    <p class="blog-main-item-title-categories">
+                                        LIFE STYLE</p>
+                                    <h4 class="blog-main-item-title-top">Latest Swimsuit Model This
+                                        Year</h4>
+                                    <p class="blog-main-item-title-bottom-shop">
+                                        <span class="blog-main-item-title-bottom-page-shop">By
+                                            BLUESKYTECH</span>AUG 12, 2023
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col blog-main-item">
+                                <a href="#">
+                                    <img src="assets/img/blog-img-3.jpg" alt="#">
+                                    <div class="blog-main-item-title">
+                                        <p class="blog-main-item-title-categories">
+                                            LIFE STYLE</p>
+                                        <h4 class="blog-main-item-title-top">Good Products For
+                                            Lovely
+                                            Girls</h4>
+                                        <p class="blog-main-item-title-bottom-shop">
+                                            <span class="blog-main-item-title-bottom-page-shop">By
+                                                BLUESKYTECH</span>AUG 12, 2023
+                                        </p>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col blog-main-item">
+                                <img src="assets/img/blog-img-1.jpg" alt="#">
+                                <div class="blog-main-item-title">
+                                    <p class="blog-main-item-title-categories">
+                                        LIFE STYLE</p>
+                                    <h4 class="blog-main-item-title-top">Summer Travel Fashion 2023</h4>
+                                    <p class="blog-main-item-title-bottom-shop">
+                                        <span class="blog-main-item-title-bottom-page-shop">By
+                                            BLUESKYTECH</span>AUG 12, 2023
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="container-blog-details-main-center-bottom-comment">
+                        <h3>Comments (2)</h3>
+                        <div class="container-blog-details-main-center-bottom-comment-list">
+                            <div
+                                class="container-blog-details-main-center-bottom-comment-list-center">
+                                <div
+                                    class="container-blog-details-main-center-bottom-comment-list-img">
+                                    <img src="assets/img/avatar.jpg" alt>
+                                </div>
+                                <div class="container-blog-details-main-center-bottom-comment-main">
+                                    <p
+                                        class="container-blog-details-main-center-bottom-comment-main-top">
+                                        FRANK ANGEL <span>10:24 Sep 02, 2023</span>
+                                    </p>
+                                    <p
+                                        class="container-blog-details-main-center-bottom-comment-main-bt">
+                                        The statement attached to the information says
+                                        "order your usual size". Not sure what a size chart for
+                                        beginners is, either you're a small, medium or large.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="container-blog-details-main-center-bottom-comment-list">
+                            <div
+                                class="container-blog-details-main-center-bottom-comment-list-center">
+                                <div
+                                    class="container-blog-details-main-center-bottom-comment-list-img">
+                                    <img src="assets/img/avatar.jpg" alt>
+                                </div>
+                                <div class="container-blog-details-main-center-bottom-comment-main">
+                                    <p
+                                        class="container-blog-details-main-center-bottom-comment-main-top">
+                                        FRANK ANGEL <span>10:24 Sep 02, 2023</span>
+                                    </p>
+                                    <p
+                                        class="container-blog-details-main-center-bottom-comment-main-bt">
+                                        The statement attached to the information says
+                                        "order your usual size". Not sure what a size chart for
+                                        beginners is, either you're a small, medium or large.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container-blog-details-main-center-bottom-table">
+                        <div class="container-blog-details-main-center-bottom-table-title">
+                            <h3>Leave a Comment</h3>
+                            <p>Your email address will not be published. Required fields are marked
+                                *</p>
+                        </div>
+                        <div class="container-blog-details-main-center-bottom-table-form">
+                            <div class="input-container">
+                                <input type="name" class="form-control"
+                                    id="exampleFormControlInput1" placeholder="Your name*">
+                                <input type="email-bottom" class="form-control"
+                                    id="exampleFormControlInput2" placeholder="Your email*">
+                            </div>
+                            <div class="input-text">
+                                <textarea class="form-control" id="exampleFormControlTextarea1"
+                                    rows="3" placeholder="Enter please your comment*"></textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container-blog-details-main-center-bottom-button">
+                        <button>Post Comment</button>
                     </div>
                 </div>
             </div>
