--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="assets/css/shop.css">
         <link rel="stylesheet" href="assets/css/product.css">
         <link rel="stylesheet" href="assets/css/blog.css">
+        <link rel="stylesheet" href="assets/css/resposive.css">
         <link rel="stylesheet" href="assets/font/fontawesome-free-6.4.2-web/css/all.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -61,8 +62,8 @@
                                     <li class="notification-icon"><i class="fa-regular fa-heart"></i>
                                         <span class="notification-badge">2</span>
                                     </li>
-                                    <li class="notification-icon"><i
-                                            class="fa-solid fa-cart-shopping"></i>
+                                    <li class="notification-icon">
+                                        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                                         <span class="notification-badge">5</span>
                                     </li>
                                 </ul>
@@ -215,7 +216,7 @@
 
                             <div class="banner-left">
                                 <img src="assets/img/img-rs.jpg" alt="#">
-                                <div class="banner-left-text">
+                                <div class="banner-left-text-shop">
                                     <h5>11.11</h5>
                                     <span class="banner-left-text-top">coming soon</span>
                                     <span class="banner-left-text-bottom">Hurry Up! Limited time
