--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                                     <li class="notification-icon"><i class="fa-regular fa-heart"></i>
                                         <span class="notification-badge">2</span>
                                     </li>
-                                    <li class="notification-icon"><i
-                                            class="fa-solid fa-cart-shopping"></i>
+                                    <li class="notification-icon">
+                                        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                                         <span class="notification-badge">5</span>
                                     </li>
                                 </ul>
