--- a/shop.html
+++ b/shop.html
@@ -6,6 +6,7 @@
         <title>Document</title>
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/shop.css">
+        <link rel="stylesheet" href="assets/css/resposive.css">
         <link rel="stylesheet" href="assets/font/fontawesome-free-6.4.2-web/css/all.min.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -61,8 +62,8 @@
                                     <li class="notification-icon"><i class="fa-regular fa-heart"></i>
                                         <span class="notification-badge">2</span>
                                     </li>
-                                    <li class="notification-icon"><i
-                                            class="fa-solid fa-cart-shopping"></i>
+                                    <li class="notification-icon">
+                                        <a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a>
                                         <span class="notification-badge">5</span>
                                     </li>
                                 </ul>
@@ -129,40 +130,55 @@
                 <!--======================= LIST-CATEGORY======================================= -->
                 <div class="category-list">
                     <div class="row category-list-row">
-                        <div class="col-sm category-list-col">
-                            <img src="assets/img/img1.jpg" alt="#">
-                            <button class="myButton">Tops</button>
+                        <div class="col-xs-12 col-md-4 col-xl-2 category-list-col">
+                            <div class="image-container">
+                                <img src="assets/img/img1.jpg" alt="#">
+                                <button class="myButton">Tops</button>
+                            </div>
                         </div>
-                        <div class="col-sm category-list-col">
-                            <img src="assets/img/img2.jpg" alt="#">
-                            <button class="myButton">Top Dresses</button>
+                        <div class="col-xs-12 col-md-4 col-xl-2 category-list-col">
+                            <div class="image-container">
+                                <img src="assets/img/img2.jpg" alt="#">
+                                <button class="myButton">Top Dresses</button>
+                            </div>
                         </div>
-                        <div class="col-sm category-list-col">
-                            <img src="assets/img/img3.jpg" alt="#">
-                            <button class="myButton">Blazers</button>
+                        <div class="col-xs-12 col-md-4 col-xl-2 category-list-col">
+                            <div class="image-container">
+                                <img src="assets/img/img3.jpg" alt="#">
+                                <button class="myButton">Blazers</button>
+                            </div>
                         </div>
-                        <div class="col-sm category-list-col">
-                            <img src="assets/img/img4.jpg" alt="#">
-                            <button class="myButton">Sportswear</button>
+                        <div class="col-xs-12 col-md-4 col-xl-2 category-list-col">
+                            <div class="image-container">
+                                <img src="assets/img/img4.jpg" alt="#">
+                                <button class="myButton">Sportswear</button>
+                            </div>
                         </div>
-                        <div class="col-sm category-list-col">
-                            <img src="assets/img/img5.jpg" alt="#">
-                            <button class="myButton">Tops</button>
+                        <div class="col-xs-12 col-md-4 col-xl-2 category-list-col">
+                            <div class="image-container">
+                                <img src="assets/img/img5.jpg" alt="#">
+                                <button class="myButton">Tops</button>
+                            </div>
                         </div>
-                        <div class="col-sm category-list-col">
-                            <img src="assets/img/img6.jpg" alt="#">
-                            <button class="myButton">Top Dresses</button>
+                        <div class="col-xs-12 col-md-4 col-xl-2 category-list-col">
+                            <div class="image-container">
+                                <img src="assets/img/img6.jpg" alt="#">
+                                <button class="myButton">Top Dresses</button>
+                            </div>
                         </div>
-                        <div class="col-sm category-list-col">
-                            <img src="assets/img/img7.jpg" alt="#">
-                            <button class="myButton">Blazers</button>
-                        </div></div>
+                        <div class="col-xs-12 col-md-4 col-xl-2 category-list-col">
+                            <div class="image-container">
+                                <img src="assets/img/img7.jpg" alt="#">
+                                <button class="myButton">Blazers</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <!-- ====================== CATEGORY ============================ -->
                 <div class="category-main">
                     <div class="row">
-                        <div class="col-2 category-main-col-left">
+                        <div class="col-3 category-main-col-left">
                             <div class="products-category">
                                 <div class="products-category-title">
                                     <h2>Products Category</h2>
