--- a/cart.html
+++ b/cart.html
@@ -294,6 +294,43 @@
                                                 aria-describedby="addon-wrapping">
                                         </div>
                                     </div>
+                                    <div class="page-cart-table-left-center-button">
+                                        <button>Calculate shipping rates</button>
+                                    </div>
+                                </div>
+                                <div class="page-cart-table-left-center-text">
+                                    <div class="page-cart-table-left-center-text-correct">
+                                        <p>There is one shipping rate available for 100000, Vietnam.</p>
+                                        <li>Standard shipping at: $50.00</li>
+                                    </div>
+                                    <div class="page-cart-table-left-center-text-error">
+                                        <p>Enter a valid United States ZIP code.</p>
+                                    </div>
+                                </div>
+                                <div class="page-cart-table-left-bottom">
+                                    <div class="page-cart-table-left-bottom-coupon">
+                                        <h3>Add Coupon:</h3>
+                                        <div class="input-text">
+                                            <textarea class="form-coupon"
+                                                id="exampleFormControlTextarea1"
+                                                rows="3"
+                                                placeholder="Coupon code..."></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="page-cart-table-left-bottom-price">
+                                        <p class="page-cart-table-left-bottom-price-title">Subtotal:</p>
+                                        <p>$586.00</p>
+                                    </div>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value
+                                            id="flexCheckDefault">
+                                        <label class="form-check-label" for="flexCheckDefault">
+                                            I agree with the <span>terms and conditions</span>
+                                        </label>
+                                    </div>
+                                    <div class="page-cart-table-left-bottom-button">
+                                        <button>PROCEED TO CHECKOUT</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
